--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "air-datepicker": "^3.3.0",
     "autoprefixer": "^10.4.14",
     "copy-webpack-plugin": "^11.0.0",
+    "gsap": "^3.11.5",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.0",
     "swiper": "^8.2.4",
